examples/test/testpolicy1600.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1600
  namespace: namespace369
spec:
  podSelector:
    matchLabels:
      key32: value39
      key2: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value9
          key38: value17
      podSelector:
        matchLabels:
          key16: value34
          key10: value12
          key15: value23
